# Langgraph_Functional_Api

00_fun_fact/: pyproject.toml
00_fun_fact/src/fun_fact/: __init__.py  simple_workflow.py
orch/: pyproject.toml
orch/src/orch/: __init__.py  eval.py  orch.py  react.py
parallel/: pyproject.toml
parallel/src/parallel/: __init__.py  simpleflow.py
router/: pyproject.toml
router/src/router/: router_flow.py
