[project]
name = "parallel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HassanSuhaib71", email = "hassansuhaib71@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.72",
]

[project.scripts]
parallel = "parallel:main"
simpleflow = "parallel.simpleflow:call_parallel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
